implementation of intership controller and service , update of the class SecurityConfig to permit the endpoint
