# src/main/java/com/laosarl/gestion_de_stagiaires/Controller/InternshipApplicationController.java
@@ -1,20 +1,11 @@
 package com.laosarl.gestion_de_stagiaires.Controller;
 
-import com.laosarl.gestion_de_stagiaires.domain.InternshipApplication;
-//import com.laosarl.gestion_de_stagiaires.Service.InternshipApplicationService;
+import com.laosarl.gestion_de_stagiaires.Service.InternshipApplicationService;
 import com.laosarl.internship_management.api.InternshipApplicationApi;
-import com.laosarl.internship_management.model.InternshipApplicationRequestDTO;
-import com.laosarl.internship_management.model.InternshipApplicationResponseDTO;
+import com.laosarl.internship_management.model.*;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
 import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
@@ -22,29 +13,43 @@ import java.util.UUID;
 
 @RequiredArgsConstructor
 @RestController
+public class InternshipApplicationController implements InternshipApplicationApi {
 
-public abstract class InternshipApplicationController implements InternshipApplicationApi {
-    //private final InternshipApplicationService internshipApplicationService;
-
-  /*  @Override
-    public ResponseEntity<InternshipApplicationResponseDTO> createInternshipApplication(InternshipApplicationRequestDTO internshipApplicationRequestDTO) {
-        return ResponseEntity.status(201).body(internshipApplicationService.create(request));
-    }*/
+    private final InternshipApplicationService internshipApplicationService;
 
     @Override
-    public ResponseEntity<Void> deleteInternshipApplication(UUID id) {
-        return null;
+    public ResponseEntity<InternshipApplicationResponseDTO> createInternshipApplication(InternshipApplicationRequestDTO internshipApplicationRequestDTO) {
+        return ResponseEntity
+                .status(HttpStatus.CREATED)
+                .body(internshipApplicationService.create(internshipApplicationRequestDTO));
     }
 
     @Override
     public ResponseEntity<List<InternshipApplicationResponseDTO>> getAllInternshipApplications() {
-        return null;
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(internshipApplicationService.getAll());
     }
 
     @Override
     public ResponseEntity<InternshipApplicationResponseDTO> getInternshipApplicationById(UUID id) {
-        return null;
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(internshipApplicationService.getById(id));
     }
 
+    @Override
+    public ResponseEntity<Void> deleteInternshipApplication(UUID id) {
+        internshipApplicationService.delete(id);
+        return ResponseEntity
+                .status(HttpStatus.NO_CONTENT)
+                .build();
+    }
 
+    @Override
+    public ResponseEntity<InternshipApplicationResponseDTO> patchInternshipApplication(UUID id, UpdateInternshipApplicationDTO dto) {
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(internshipApplicationService.patch(id, dto));
+    }
 }
